@@ -46,19 +46,19 @@
 }
 
 .modalHeader {
-  padding: 2px 16px;
-  background-color: #5cb85c;
+  padding: 12px 16px;
+  background-color: #D8084A;
   color: white;
 }
 
 .modalBody {
-  padding: 2px 16px;
+  padding: 12px 16px;
   text-align: center;
 }
 
 .modalFooter {
-  padding: 2px 16px;
-  background-color: #5cb85c;
+  padding: 12px 16px;
+  background-color: #D8084A;
   color: white;
 }
 
@@ -68,6 +68,7 @@
     display: block;
     margin-left: auto;
     margin-right: auto;
+    padding: 12px;
 }
 
 /* add animation */
