@@ -1,6 +1,2 @@
 /* index.css */
 
-* {
-  padding: 0;
-  margin: 0;
-}
