@@ -1,5 +1,7 @@
 10/15/25:
 
+- Fix padding issue with buttons
+- Fix final 0 not showing in price if a decimal
 - Use styling from Items for items in Cart
 - Add basic Items styling for Shop page
 - Add basic Navigation styling
